kubernetes/pi/apps/default/misc-ingress/app/omni-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: &host omni.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: omni
                port:
                  number: 8090
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omni
subsets:
  - addresses:
      - ip: ${BEE_IP}
    ports:
      - name: http
        port: 8090
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: omni
spec:
  ports:
    - name: http
      port: 8090
  type: ClusterIP
